# project-white

./: .dockerignore  .env.example  Cargo.toml  Dockerfile  LICENSE-MIT  README.md  install.ps1  install.sh  render.yaml
.cargo/: audit.toml
.github/workflows/: ci.yml
adr/: 001-language-choice.md  002-crypto-primitives.md  003-transport-protocol.md  004-session-code-format.md
deploy/: README.md  oracle-cloud-setup.sh
doc/: UX_SPEC.md
docs/: ARCHITECTURE.md  PROTOCOL.md  SECURITY.md
docs/reviews/: milestone-1-architecture-review.md  milestone-1-code-review.md  milestone-1-documentation-review.md  milestone-1-network-audit.md  milestone-1-performance-review.md  milestone-1-protocol-review.md  milestone-1-qa-report.md  milestone-1-release-checklist.md  milestone-1-reliability-review.md  milestone-1-repository-review.md  milestone-1-security-audit.md
src/: lib.rs  main.rs  update.rs
src/cli/: mod.rs
src/crypto/: mod.rs
src/protocol/: mod.rs
src/server/: codec.rs  handlers.rs  mod.rs  session.rs
src/transfer/: handshake.rs  manifest.rs  mod.rs  receiver.rs  sender.rs  session_manager.rs
src/ui/: mod.rs
